; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_x_all.c_X509_REQ_verify.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_x_all.c_X509_REQ_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@X509_F_X509_REQ_VERIFY = common dso_local global i32 0, align 4
@ASN1_R_UNKNOWN_SIGNATURE_ALGORITHM = common dso_local global i32 0, align 4
@NID_sm2 = common dso_local global i32 0, align 4
@X509_REQ_INFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @X509_REQ_verify(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 2
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @OBJ_obj2nid(i32 %11)
  %13 = call i32 @OBJ_find_sigid_algs(i32 %12, i32* %6, i32* %7)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %2
  %16 = load i32, i32* @X509_F_X509_REQ_VERIFY, align 4
  %17 = load i32, i32* @ASN1_R_UNKNOWN_SIGNATURE_ALGORITHM, align 4
  %18 = call i32 @X509err(i32 %16, i32 %17)
  store i32 0, i32* %3, align 4
  br label %41

19:                                               ; preds = %2
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @NID_sm2, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %19
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @x509_req_verify_sm2(%struct.TYPE_5__* %24, i32* %25, i32 %26, i32 %27)
  store i32 %28, i32* %3, align 4
  br label %41

29:                                               ; preds = %19
  %30 = load i32, i32* @X509_REQ_INFO, align 4
  %31 = call i32 @ASN1_ITEM_rptr(i32 %30)
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 2
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 0
  %39 = load i32*, i32** %5, align 8
  %40 = call i32 @ASN1_item_verify(i32 %31, %struct.TYPE_6__* %33, i32 %36, i32* %38, i32* %39)
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %29, %23, %15
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @OBJ_find_sigid_algs(i32, i32*, i32*) #1

declare dso_local i32 @OBJ_obj2nid(i32) #1

declare dso_local i32 @X509err(i32, i32) #1

declare dso_local i32 @x509_req_verify_sm2(%struct.TYPE_5__*, i32*, i32, i32) #1

declare dso_local i32 @ASN1_item_verify(i32, %struct.TYPE_6__*, i32, i32*, i32*) #1

declare dso_local i32 @ASN1_ITEM_rptr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
